--- a/invoice/templates/invoice/base.html
+++ b/invoice/templates/invoice/base.html
@@ -11,7 +11,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" media='all'>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <title>{% block title %}Report{% endblock %}</title>
+  <title>{% block title %}Invoice{% endblock %}</title>
 
     <style>
       @media print {
@@ -19,6 +19,35 @@
             float: left;
             width: 50%;
         }
+        img {
+          -webkit-print-color-adjust: exact !important;
+          print-color-adjust: exact !important;
+          opacity: 1 !important;
+        }
+
+        .no-print {
+          display: none !important;
+        }
+        .print-only {
+          display: block !important;
+        }
+        .print-only img {
+          opacity: 1 !important;
+        }
+        .pdf-image-container {
+  position: relative;
+}
+/* .pdf-image-container img {
+  width: 100%;
+} */
+.pdf-image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0);
+}
     }
     </style>
 </head>
